--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,4 @@
 <!--        {{ post.title }}-->
 <!--    </li>-->
 <!--</ul>-->
-<app-jsontrial></app-jsontrial>
+<!--<app-jsontrial></app-jsontrial>-->
