--- a/src/app/jsontrial/jsontrial.component.html
+++ b/src/app/jsontrial/jsontrial.component.html
@@ -18,3 +18,23 @@
 <!--        </tbody>-->
     </table>
 </div>
+
+<!--    <div class="grid">-->
+<!--        <div class="col-12">-->
+<!--            <div class="card">-->
+<!--                <h5>Filter Menu</h5>-->
+<!--                <p-table #dt1 [value]="customers1" dataKey="id" [rows]="10" [loading]="loading" [rowHover]="true" styleClass="p-datatable-gridlines" [paginator]="true" [globalFilterFields]="['name','country.name','representative.name','status']" responsiveLayout="scroll">-->
+<!--                    <ng-template pTemplate="caption">-->
+<!--                        <div class="flex justify-content-between flex-column sm:flex-row">-->
+<!--                            <button pButton label="Clear" class="p-button-outlined mb-2" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>-->
+<!--                            <span class="p-input-icon-left mb-2">-->
+<!--							<i class="pi pi-search"></i>-->
+<!--							<input pInputText type="text" #filter (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search Keyword" class="w-full"/>-->
+<!--						</span>-->
+<!--                        </div>-->
+<!--                    </ng-template>-->
+<!--                </p-table>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
