--- a/src/app/jsontrial/jsontrial.component.html
+++ b/src/app/jsontrial/jsontrial.component.html
@@ -1,40 +1,70 @@
-<div class="container">
-    <table class="table table-bordered table-striped">
-<!--        <thread>-->
-            <tr>
-                <th>User</th>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Body</th>
-            </tr>
-<!--        </thread>-->
-<!--        <tbody>-->
-        <tr *ngFor="let post of posts">
-            <td><span>{{post.userId}}</span></td>
-            <td><span>{{post.id}}</span></td>
-            <td><span>{{post.title}}</span></td>
-            <td><span>{{post.body}}</span></td>
-        </tr>
-<!--        </tbody>-->
-    </table>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+            <h5>Posts Table</h5>
+            <p-table [value]="posts" styleClass="p-datatable-gridlines" [rowHover]="true" [paginator]="true" [rows]="10">
+                <ng-template pTemplate="caption">
+                    <div class="flex justify-content-between flex-column sm:flex-row">
+                        <button pButton label="Clear" class="p-button-outlined mb-2" icon="pi pi-filter-slash"> <!--(click)="clear(dt1)"--> </button>
+                        <span class="p-input-icon-left mb-2">
+							<i class="pi pi-search"></i>
+							<input pInputText type="text" #filter (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search Keyword" class="w-full"/>
+						</span>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>
+                            <div class="flex justify-content-between align-items-center">
+                                User
+                                <p-columnFilter type="text" field="name" display="menu"
+                                                placeholder="Search by name"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="flex justify-content-between align-items-center">
+                                ID
+                                <p-columnFilter type="text" field="name" display="menu"
+                                                placeholder="Search by name"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="flex justify-content-between align-items-center">
+                                Title
+                                <p-columnFilter type="text" field="name" display="menu"
+                                                placeholder="Search by name"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="flex justify-content-between align-items-center">
+                                Body
+                                <p-columnFilter type="text" field="name" display="menu"
+                                                placeholder="Search by name"></p-columnFilter>
+                            </div>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-post>
+                    <tr>
+                        <td style="min-width: 12rem;">
+                            {{post.userId}}
+                        </td>
+                        <td style="min-width: 12rem;">
+                            {{post.id}}
+                        </td>
+                        <td style="min-width: 12rem;">
+                            {{post.title}}
+                        </td>
+                        <td style="min-width: 12rem;">
+                            {{post.body}}
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+
+    </div>
 </div>
 
-<!--    <div class="grid">-->
-<!--        <div class="col-12">-->
-<!--            <div class="card">-->
-<!--                <h5>Filter Menu</h5>-->
-<!--                <p-table #dt1 [value]="customers1" dataKey="id" [rows]="10" [loading]="loading" [rowHover]="true" styleClass="p-datatable-gridlines" [paginator]="true" [globalFilterFields]="['name','country.name','representative.name','status']" responsiveLayout="scroll">-->
-<!--                    <ng-template pTemplate="caption">-->
-<!--                        <div class="flex justify-content-between flex-column sm:flex-row">-->
-<!--                            <button pButton label="Clear" class="p-button-outlined mb-2" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>-->
-<!--                            <span class="p-input-icon-left mb-2">-->
-<!--							<i class="pi pi-search"></i>-->
-<!--							<input pInputText type="text" #filter (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search Keyword" class="w-full"/>-->
-<!--						</span>-->
-<!--                        </div>-->
-<!--                    </ng-template>-->
-<!--                </p-table>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+
 
